Basic support for webpack

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/vincenting/artdialog2#readme",
   "dependencies": {
-    "jquery": "*"
+    "css-loader": "*",
+    "jquery": "*",
+    "style-loader": "*"
   }
 }
